# Q2_25_Builder_Ghazal

./: .gitignore
amm/: Anchor.toml  package-lock.json  package.json  tsconfig.json
amm/programs/amm/: Cargo.toml
amm/tests/: amm.ts
econsight/: Anchor.toml  deploy-keypair.json  package-lock.json  package.json  tsconfig.json
econsight/oracle-bot/: oracle.json  oracle.ts  package-lock.json  package.json  tsconfig.json
econsight/programs/econ_sight_market/: Cargo.toml
econsight/scripts/: createMarketCli.ts  demo.ts
econsight/tests/: econ_sight_market.ts  test-esm.ts
econsight/ui/: .env.local  package.json
econsight/ui/pages/: [marketPda].tsx  _app.tsx  index.tsx  my-portfolio.tsx
econsight2/: Anchor.toml  Workflow.txt  package-lock.json  package.json  setup-localnet.sh
econsight2/app/: package-lock.json  package.json  tsconfig.json  vite.config.ts
econsight2/app/idl/: econsightmarket23.json
econsight2/app/src/: App.tsx  main.tsx
econsight2/scripts/: demo.ts
econsight2/tests/: econsight2.ts
escrow/: Anchor.toml  package-lock.json  package.json
escrow/tests/: escrow.ts
marketplace/: Anchor.toml  package.json  tsconfig.json
marketplace/oracle-bot/: oracle.ts  package.json  tsconfig.json
marketplace/tests/: econ_sight_market.ts
marketplace/ui/: package-lock.json
prereq-Rust/: Cargo.toml  Turbin3_prereq.rs  dev-wallet.json  lib.rs
prereq-TS/: Turbin3_prereq.ts  airdrop.ts  enroll.ts  keygen.ts  package.json  transfer.ts
stake/: Anchor.toml
vault/: Anchor.toml
vault/programs/vault/: Cargo.toml
vault/programs/vault/src/: lib.rs
(+79 files in other folders)
